--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Flow</string>
+    <string name="search_button">검색</string>
+    <string name="log_button">최근검색</string>
 </resources>
